@@ -36,6 +36,32 @@ function(x,
     p
 }
 
+SimpleCorpus <-
+function(x, control = list(language = "en"))
+{
+    stopifnot(inherits(x, "Source"))
+
+    if (!is.null(control$reader))
+        warning("custom reader is ignored")
+
+    content <- if (inherits(x, "VectorSource"))
+        x$content
+    else if (inherits(x, "DirSource")) {
+        setNames(as.character(
+                   lapply(x$filelist,
+                          function(f) paste(readContent(f, x$encoding, "text"),
+                                            collapse = "\n"))
+                   ),
+                 basename(x$filelist))
+    } else
+        stop("unsupported source type")
+    s <- list(content = content,
+              meta = CorpusMeta(language = control$language),
+              dmeta = data.frame(row.names = seq_along(x)))
+    class(s) <- c("SimpleCorpus", "Corpus")
+    s
+}
+
 Corpus <-
 VCorpus <-
 function(x, readerControl = list(reader = reader(x), language = "en"))
@@ -71,6 +97,7 @@ function(x, readerControl = list(reader = reader(x), language = "en"))
 }
 
 `[.PCorpus` <-
+`[.SimpleCorpus` <-
 function(x, i)
 {
     if (!missing(i)) {
@@ -79,7 +106,6 @@ function(x, i)
     }
     x
 }
-
 `[.VCorpus` <-
 function(x, i)
 {
@@ -107,6 +133,15 @@ function(x, i)
     i <- .map_name_index(x, i)
     db <- filehash::dbInit(x$dbcontrol[["dbName"]], x$dbcontrol[["dbType"]])
     filehash::dbFetch(db, x$content[[i]])
+}
+`[[.SimpleCorpus` <-
+function(x, i)
+{
+    i <- .map_name_index(x, i)
+    n <- names(x$content)
+    PlainTextDocument(x$content[[i]],
+                      id = if (is.null(n)) i else n[i],
+                      language = meta(x, "language"))
 }
 `[[.VCorpus` <-
 function(x, i)
@@ -139,6 +174,10 @@ function(x, i, value)
 as.list.PCorpus <- as.list.VCorpus <-
 function(x, ...)
     setNames(content(x), as.character(lapply(content(x), meta, "id")))
+
+as.list.SimpleCorpus <-
+function(x, ...)
+    as.list(content(x))
 
 as.VCorpus <-
 function(x)
@@ -195,6 +234,10 @@ function(x)
     x$content
 }
 
+content.SimpleCorpus <-
+function(x)
+    x$content
+
 content.PCorpus <-
 function(x)
 {
@@ -205,7 +248,9 @@ function(x)
 inspect <-
 function(x)
     UseMethod("inspect", x)
-inspect.PCorpus <- inspect.VCorpus <-
+inspect.PCorpus <-
+inspect.SimpleCorpus <-
+inspect.VCorpus <-
 function(x)
 {
     print(x)
@@ -214,11 +259,15 @@ function(x)
     invisible(x)
 }
 
-length.PCorpus <- length.VCorpus <-
+length.PCorpus <-
+length.SimpleCorpus <-
+length.VCorpus <-
 function(x)
     length(x$content)
 
-names.PCorpus <- names.VCorpus <-
+names.PCorpus <-
+names.SimpleCorpus <-
+names.VCorpus <-
 function(x)
     as.character(meta(x, "id", "local"))
 
@@ -229,7 +278,9 @@ function(x, value)
     x
 }
 
-format.PCorpus <- format.VCorpus <-
+format.PCorpus <-
+format.SimpleCorpus <-
+format.VCorpus <-
 function(x, ...)
 {
     c(sprintf("<<%s>>", class(x)[1L]),
