@@ -1,9 +1,11 @@
 \name{tm_filter}
 \alias{tm_filter}
 \alias{tm_filter.PCorpus}
+\alias{tm_filter.SimpleCorpus}
 \alias{tm_filter.VCorpus}
 \alias{tm_index}
 \alias{tm_index.PCorpus}
+\alias{tm_index.SimpleCorpus}
 \alias{tm_index.VCorpus}
 \title{Filter and Index Functions on Corpora}
 \description{
@@ -11,13 +13,16 @@
 }
 \usage{
 \method{tm_filter}{PCorpus}(x, FUN, \dots)
+\method{tm_filter}{SimpleCorpus}(x, FUN, \dots)
 \method{tm_filter}{VCorpus}(x, FUN, \dots)
 \method{tm_index}{PCorpus}(x, FUN, \dots)
+\method{tm_index}{SimpleCorpus}(x, FUN, \dots)
 \method{tm_index}{VCorpus}(x, FUN, \dots)
 }
 \arguments{
   \item{x}{A corpus.}
-  \item{FUN}{a filter function taking a text document as input and returning a
+  \item{FUN}{a filter function taking a text document or a string (if
+    \code{x} is a \code{SimpleCorpus}) as input and returning a
     logical value.} 
   \item{\dots}{arguments to \code{FUN}.}
 }
